@@ -1,3 +1,7 @@
+Fri Jun 27 22:15:52 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gtktheory.c: use clist widget for double, take, etc. points.
+
 Fri Jun 27 20:42:14 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* rollout.c (BasicCubefulRollout): fix bug in variance reduction
